# ChangeLog for dev-libs/totem-pl-parser
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/totem-pl-parser/ChangeLog,v 1.3 2008/04/09 22:41:24 eva Exp $

*totem-pl-parser-2.22.2 (09 Apr 2008)

  09 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +totem-pl-parser-2.22.2.ebuild:
  bump to 2.22.2. Add support for feed://

  03 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  totem-pl-parser-2.22.1.ebuild:
  Add ~alpha/~ia64/~sparc

*totem-pl-parser-2.22.1 (23 Mar 2008)

  23 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +totem-pl-parser-2.22.1.ebuild:
  New ebuild for GNOME-2.22. Playlist parsing library splitted out
  of totem.
