@@ -1,9 +1,10 @@
 # ChangeLog for dev-libs/libgweather
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgweather/ChangeLog,v 1.4 2008/04/24 17:40:08 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgweather/ChangeLog,v 1.5 2008/04/24 18:07:12 corsair Exp $
 
-  24 Apr 2008; Markus Rothe <corsair@gentoo.org> ChangeLog:
-  Added ~ppc64; bug #218417
+  24 Apr 2008; Markus Rothe <corsair@gentoo.org>
+  libgweather-2.22.1.1.ebuild:
+  Added ~ppc64; bug #218794
 
 *libgweather-2.22.1.1 (09 Apr 2008)
 
