@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/totem-pl-parser
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/totem-pl-parser/ChangeLog,v 1.3 2008/04/09 22:41:24 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/totem-pl-parser/ChangeLog,v 1.4 2008/04/24 18:05:01 corsair Exp $
+
+  24 Apr 2008; Markus Rothe <corsair@gentoo.org>
+  totem-pl-parser-2.22.2.ebuild:
+  Added ~ppc64; bug #218794
 
 *totem-pl-parser-2.22.2 (09 Apr 2008)
 
